--- a/mm2src/mm2_bin_lib/Cargo.toml
+++ b/mm2src/mm2_bin_lib/Cargo.toml
@@ -41,7 +41,7 @@ num-traits.workspace = true
 serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
 
 [build-dependencies]
-chrono.workspace = true
+chrono = { workspace = true, features = ["now"] }
 gstuff.workspace = true
 regex.workspace = true
 
