--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -111,7 +111,7 @@ uuid.workspace = true
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # TODO: Removing this causes `wasm-pack` to fail when starting a web session (even though we don't use this crate).
 # Investigate why.
-instant = { workspace = true, features = ["wasm-bindgen"] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 js-sys.workspace = true
 mm2_db = { path = "../mm2_db" }
 mm2_test_helpers = { path = "../mm2_test_helpers" }
@@ -122,7 +122,6 @@ wasm-bindgen-test.workspace = true
 web-sys = { workspace = true, features = ["console"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-dirs.workspace = true
 futures-rustls.workspace = true
 hyper = { workspace = true, features = ["client", "http2", "server", "tcp"] }
 rcgen.workspace = true
