--- a/mm2src/mm2_test_helpers/Cargo.toml
+++ b/mm2src/mm2_test_helpers/Cargo.toml
@@ -30,9 +30,9 @@ serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
 uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-chrono = { version = "0.4", features = ["wasmbind"] }
+chrono = { version = "0.4.41", default-features = false, features = ["wasmbind"] }
 gstuff = { version = "0.7" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-chrono = "0.4"
+chrono = { version = "0.4.41", default-features = false }
 gstuff = { version = "0.7" }
